--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-js-pagination": "^3.0.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuidv4": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "uuid4": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
